SERVER-19705 unmix MozJS and Mongo Error Codes

SpiderMonkey error codes overlap with Mongo error codes in thrown user
assertions. Avoid that by lifting our error codes above theirs.